--- a/index.html
+++ b/index.html
@@ -1,28 +1,54 @@
 <!DOCTYPE html>
 <html lang="pt-br">
-<head>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <head>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Rocket.sect</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Rocket.sect</title>
 
-  <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
 
-  <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@700&display=swap" rel="stylesheet">
-</head>
-<body>
-  <div class="page">
-    <nav>
-      <img src="images/logo.svg" alt="Imagem da logo da Rocket.sect">
-  
-      <ul>
-        <li><a href="#">Início</a></li>
-        <li><a href="#">Serviços</a></li>
-        <li><a href="#">Contato</a></li>
-      </ul>
-    </nav>
-  </div>
-</body>
+    <link 
+      href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500;700&family=Open+Sans:wght@700&display=swap" 
+      rel="stylesheet">
+  </head>
+  <body>
+    <div class="page">
+      <nav>
+        <a href="#">
+          <img src="images/logo.svg" alt="Logo da Rocket.sect">
+        </a>
+    
+        <ul>
+          <li><a href="#">Início</a></li>
+          <li><a href="#">Serviços</a></li>
+          <li><a href="#">Contato</a></li>
+        </ul>
+      </nav>
+
+      <main>
+        <img src="images/img1.png" alt="Mulher comemorando ao lado de um computador gigante com símbolo de proteção">
+        <div class="content">
+          <h1>Seus dados estão <span>protegidos</span>?</h1>
+          <p>
+            A informação é fundamental e de <strong>extrema importância</strong> para qualquer<br>
+            empresa.
+            <br>
+            <br>
+            Aqui vai um <strong>texto</strong> como se fosse uma empresa de <span>segurança da informação</span><br>
+            apresentando o seu produto e com o texto todo estilizado.
+          </p>
+        </div>
+      </main>
+
+      <footer>
+        <div class="line"></div>
+        <p>para mais informações nos siga no instagram @rocketsect</p>
+      </footer>
+
+      <img id="padlock" src="images/padlock.svg" alt="Cadeado trancado no canto ínferior esquerdo da tela">
+    </div>
+  </body>
 </html>
